# mSquaredPlex

./: .env  Dockerfile_MAINSTACK_htmltoimage  Dockerfile_MAINSTACK_htmltoimage2  Dockerfile_MAINSTACK_myimdb  Dockerfile_MAINSTACK_telegram  Dockerfile_MAINSTACK_transmission  Dockerfile_MOVIELIB_imdb  Dockerfile_MOVIELIB_master  Dockerfile_MOVIELIB_omdb  Dockerfile_MOVIELIB_tmdb  Dockerfile_MyImdb_sync_service  Dockerfile_filelist_service  Dockerfile_imdb_db_update_service  Dockerfile_myimdb  Dockerfile_newsletter  Dockerfile_omdb_db_update_service  Dockerfile_telegram  Dockerfile_telegram_service  Dockerfile_tmdb_db_update_service  Dockerfile_torrapi  Dockerfile_torrent_service  Dockerfile_transmission  Dockerfile_wha  controller.py  crypto_tools.py  db_tools.py  docker-compose.yml  docker-compose_HTMLTOIMAGE.yml  docker-compose_MAINSTACK.yml  docker-compose_MOVIELIB.yml  docker-compose_cloud.yml  docker-compose_local.yml  docker-compose_myimdb.yml  dockerfile_python  email_test.py  email_tools.py  env_example  master_scheduler.py  master_scheduler2.py  plex_utils.py  (+12 more)
config/: mycredentials.py
controlers/: filelist.py
db_service/: imdb_db.py  main_service.py  refresh_imdb_db.py  refresh_omdb_db.py  refresh_tmdb_db.py
db_services/: db_services_utils.py  example.html  imdb_dump_import.py  last_update.txt  master_scheduler.py  refresh_imdb_db.py  refresh_omdb_db.py  refresh_tmdb_db.py  requirements.txt  sync_my_imdb_db.py
filelist_service/: email_tools.py  filelist_routine.py  requirements.txt
filelist_service/views/: email_new_movies.html  new_trnt.xml
html_to_image/api/: server.py
html_to_image2/: app.js
initial_setup/config/: config.py
initial_setup/controlers/: filelist.py
initial_setup/db/: newMovies.xml
initial_setup/models/: credlib.py  movie.py  my_imdb.py  my_omdb.py  my_tmdb.py
initial_setup/views/: _movie.html  _torrent.html
models/: movie.py  mtls.py  my_flst.py  my_imdb.py  my_omdb.py  my_tmdb.py
myimdb_service/: bot_rate_title.py  bot_watchlist.py  myimdb_services_utils.py  requirements.txt  sync_my_imdb_db.py  sync_services.py  sync_torrents.py
newsletter_service/: email_tools.py  newsletter_routine.py  pyproject.toml  requirements.txt
newsletter_service/views/: _movie.html  email_filelist.html  new_trnt.xml
telegram_service/: Dockerfile  README.md  app.py  bot.py  bot2.py  bot_csv.py  bot_get_progress.py  bot_load_csv.py  bot_rate_title.py  bot_utils.py  bot_watchlist.py  command_regex_handler.py  pyproject.toml  requirements.txt  test.py
telegram_service/keyboards/: main.py
telegram_service/routers/: auth_router.py  download_router.py  misc_router.py  progress_router.py  rating_router.py
telegram_service/services/: download_service.py  notifier_service.py  plex_service.py  progress_service.py  user_service.py  watchlist_service.py
test_matei/: Dockerfile  test.py
torr_service/: change_transmission_settings.sh  finished_torrent_routine.py  requirements.txt  server.py  settings.json  torr_service.py  torr_service_utils.py  torr_tools.py  torr_utils.py
torrent_api/: app.py  docker-compose.example.yml  gunicorn.conf.py  pyproject.toml  requirements.txt  server.py  torr_service_utils.py  wsgi.py
torrent_api/docs/: DEPLOYMENT.md
torrent_db_refresher/: change_transmission_settings.sh  server.py  torr_finished_routine.sh  torr_service_utils.py
transmission_mod/: test.txt
transmission_mod/mod/root/defaults/: modconfig  settings.json  test.txt
transmission_utils/: finished_torrent_routine.py
views/: _torrent.html  new_trnt.xml  test.html
wha_service/: __init__.py  app.py  config.py  pyproject.toml  requirements.txt  whatsapp_client.py
